--- a/files/.ssh/config
+++ b/files/.ssh/config
@@ -1,12 +1,12 @@
 Host *
-IdentityFile ~/.ssh/leander
-IdentityFile ~/.ssh/admin
+## IdentityFile ~/.ssh/leander
+## IdentityFile ~/.ssh/admin
 IdentityFile ~/.ssh/id_rsa
 #AddKeysToAgent yes
 #UseChain yes
 ServerAliveInterval 120
 TCPKeepAlive yes
-## lj 2020 PasswordAuthentication no
+## PasswordAuthentication no
 
 #Include ~/.ssh/config.*
 Host arthur
