--- a/files/.mkshrc
+++ b/files/.mkshrc
@@ -7,8 +7,9 @@ export PS1=$'\e[33m\e[44mk\e[34m\e[43m${USER:=$(id -un)}@${HOSTNAME:=$(hostname)
 export EXPORT="export"
 export EQ="="
 source $HOME/.shlvl
-if [ $SHLVL -eq $shlvl ]; then
+if [ -z $HAS_ENV ]; then
   source $HOME/.shenv
+  export HAS_ENV="true"
 fi
 unset EXPORT EQ shlvl
 
