changed config for use with raspis

--- a/files/.ssh/config
+++ b/files/.ssh/config
@@ -1,6 +1,4 @@
 Host *
-## IdentityFile ~/.ssh/leander
-## IdentityFile ~/.ssh/admin
 IdentityFile ~/.ssh/id_rsa
 #AddKeysToAgent yes
 #UseChain yes
@@ -9,9 +7,9 @@ TCPKeepAlive yes
 ## PasswordAuthentication no
 
 #Include ~/.ssh/config.*
-Host arthur
-HostName arthur
-User ljedamus
+Host master
+HostName master
+User leander
 IdentityFile ~/.ssh/id_rsa
 ForwardX11 yes
 ForwardX11Trusted yes
@@ -19,3 +17,50 @@ ForwardX11Trusted yes
 HashKnownHosts yes
 VerifyHostKeyDNS ask
 VisualHostKey yes
+
+#Include ~/.ssh/config.*
+Host github.com
+HostName github.com
+User jedamus
+IdentityFile ~/.ssh/github
+#ForwardX11 yes
+#ForwardX11Trusted yes
+#Port 222
+HashKnownHosts yes
+VerifyHostKeyDNS ask
+VisualHostKey yes
+
+#Include ~/.ssh/config.*
+Host pilite
+HostName pilite.local
+User pi
+IdentityFile ~/.ssh/id_rsa
+ForwardX11 yes
+ForwardX11Trusted yes
+#Port 222
+HashKnownHosts yes
+VerifyHostKeyDNS ask
+VisualHostKey yes
+
+Host raspi64
+HostName raspi64.local
+User pi
+IdentityFile ~/.ssh/id_rsa
+ForwardX11 yes
+ForwardX11Trusted yes
+#Port 222
+HashKnownHosts yes
+VerifyHostKeyDNS ask
+VisualHostKey yes
+
+Host nvidia
+HostName nvidia.local
+User leander
+IdentityFile ~/.ssh/id_rsa
+ForwardX11 yes
+ForwardX11Trusted yes
+#Port 222
+HashKnownHosts yes
+VerifyHostKeyDNS ask
+VisualHostKey yes
+
