--- a/files/.mkshrc
+++ b/files/.mkshrc
@@ -6,10 +6,10 @@ export PS1=$'\e[33m\e[44mk\e[34m\e[43m${USER:=$(id -un)}@${HOSTNAME:=$(hostname)
 ##+## Leander Jedamus
 export EXPORT="export"
 export EQ="="
-source $HOME/.shlvl
+#source $HOME/.shlvl
 if [ -z $HAS_ENV ]; then
   source $HOME/.shenv
   export HAS_ENV="true"
 fi
-unset EXPORT EQ shlvl
+unset EXPORT EQ
 
